fix cursor not showing inside form input

--- a/css/main.css
+++ b/css/main.css
@@ -105,7 +105,7 @@ body {
 /* Nav Bar*/
 
 .navbar {
-	height: 55px;
+	padding: 0 5px;
 }
 
 .navbar h1 a {
@@ -290,6 +290,7 @@ body {
 	width: 100%;
 	height: 30px;
 	border-radius: 5px;
+	padding-left:2px;
 }
 
 .form-col .btn {
